fix: 옵션 비활성화 및 배송사 추가 - 상품 등록 오류 수정

--- a/실행현황.md
+++ b/실행현황.md
@@ -330,6 +330,30 @@ npx vercel --prod
 - [x] clientId_timestamp 형식으로 password 생성
 - [x] clientSecret을 salt로 사용하여 bcrypt 해시 생성
 
+### 2026-02-13 (환경설정 오류 수정)
+
+#### 29. Gemini API 키 교체
+- [x] 기존 API 키가 유출되어 Google에서 차단됨
+- [x] 새 API 키로 교체: `AIzaSyDe7eSeUKIoaLZhK_6qFIAQlKRIV6omW0c`
+
+#### 30. 네이버 커머스 API "Invalid salt version" 오류 해결
+- [x] **원인**: .env.local에서 `$` 문자가 환경변수 참조로 해석됨
+- [x] **증상**: `$2a$04$...` 값이 `04.s...`로 잘못 읽힘
+- [x] **해결**: `$`를 `\$`로 이스케이프 처리
+  ```
+  NAVER_COMMERCE_APP_SECRET=\$2a\$04\$jsy.s6tFg/kIguFtZmpXju
+  ```
+- [x] bcrypt 서명 생성 테스트 성공 확인
+
+#### 31. Claude Code 훅 설정 수정
+- [x] settings.json에서 존재하지 않는 훅 파일 참조 제거
+- [x] auto-record.sh 훅을 범용(universal)으로 수정
+- [x] 모든 프로젝트에서 실행현황.md 자동 감지하도록 개선
+
+#### 32. 상품 등록 오류 수정
+- [x] **오류**: "택배사를 필수로 입력해야 합니다"
+- [x] **해결**: `deliveryInfo`에 `deliveryCompany: 'CJGLS'` 추가 (CJ대한통운)
+
 ---
 
 ## 다음 할 일 (예정)
