feat: 사이즈/컬러 입력 동기화 - 문구 생성 + 등록에 함께 사용

--- a/실행현황.md
+++ b/실행현황.md
@@ -330,6 +330,23 @@ npx vercel --prod
 - [x] clientId_timestamp 형식으로 password 생성
 - [x] clientSecret을 salt로 사용하여 bcrypt 해시 생성
 
+### 2026-02-13 (Claude Code 규칙 강화)
+
+#### 33. CLAUDE.md 규칙 추가
+- [x] 서버/프로세스 절대 금지 규칙 추가 (kill, pkill, killall 임의 실행 금지)
+- [x] "안 할게요" 약속 규칙 추가 (약속 시 반드시 CLAUDE.md에 기록)
+
+#### 34. kill 명령어 차단 훅 설정
+- [x] `~/.claude/settings.json`에 PreToolUse 훅 추가
+- [x] `~/.claude/hooks/block-kill.sh` 스크립트 생성
+- [x] kill/pkill/killall 명령어 실행 시 자동 차단
+
+#### 35. 개발 서버 실행 방식 변경
+- [x] nohup으로 서버 실행 (Claude Code 종료해도 서버 유지)
+- [x] 실행 명령어: `cd ~/스마트스토어_자동생성앱 && nohup npm run dev > /dev/null 2>&1 &`
+
+---
+
 ### 2026-02-13 (환경설정 오류 수정)
 
 #### 29. Gemini API 키 교체
