feat: 판매정보를 2번 섹션에 통합 - 중복 입력 제거

--- a/실행현황.md
+++ b/실행현황.md
@@ -345,6 +345,12 @@ npx vercel --prod
 - [x] nohup으로 서버 실행 (Claude Code 종료해도 서버 유지)
 - [x] 실행 명령어: `cd ~/스마트스토어_자동생성앱 && nohup npm run dev > /dev/null 2>&1 &`
 
+#### 36. 실행현황.md 기록 강제 훅 설정
+- [x] `auto-record.sh` 업데이트: 파일 수정 시 대기 상태 저장
+- [x] `check-record.sh` 신규 생성: 실행현황.md 업데이트 전까지 다음 파일 수정 차단
+- [x] `settings.json`에 PreToolUse 훅 추가 (Edit|Write → check-record.sh)
+- [x] 흐름: 파일 수정 → 알림 → 다음 수정 차단 → 실행현황.md 업데이트 → 차단 해제
+
 ---
 
 ### 2026-02-13 (환경설정 오류 수정)
@@ -366,6 +372,18 @@ npx vercel --prod
 - [x] settings.json에서 존재하지 않는 훅 파일 참조 제거
 - [x] auto-record.sh 훅을 범용(universal)으로 수정
 - [x] 모든 프로젝트에서 실행현황.md 자동 감지하도록 개선
+
+#### 32. 상품 등록 오류 수정
+- [x] **오류**: "택배사를 필수로 입력해야 합니다"
+- [x] **해결**: `deliveryInfo`에 `deliveryCompany: 'CJGLS'` 추가 (CJ대한통운)
+
+#### 36. 조합형 옵션으로 변경
+- [x] 단독형 옵션(optionSimple) → 조합형 옵션(optionCombinations)으로 변경
+- [x] `generateOptionCombinations` 함수 추가: 사이즈 x 색상 조합 자동 생성
+
+#### 37. 사이즈/컬러 입력 동기화
+- [x] ProductForm 입력 → SalesInfo 자동 반영
+- [x] 문구 생성 + 등록에 같은 데이터 사용
 
 #### 32. 상품 등록 오류 수정
 - [x] **오류**: "택배사를 필수로 입력해야 합니다"
